src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachment_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachment_StringErrorContext.class */
public final class NVMemoryAttachment_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglGetMemoryObjectDetachedResourcesuivNV(IIIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachmentErrorContext");
        methods.put("glGetMemoryObjectDetachedResourcesuivNV(IIILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachmentErrorContext");
        methods.put("glResetMemoryObjectParameterNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachmentErrorContext");
        methods.put("glTexAttachMemoryNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachmentErrorContext");
        methods.put("glBufferAttachMemoryNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachmentErrorContext");
        methods.put("glTextureAttachMemoryNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachmentErrorContext");
        methods.put("glNamedBufferAttachMemoryNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachmentErrorContext");
        methods.put("glGetMemoryObjectDetachedResourcesuivNV(III[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVMemoryAttachmentErrorContext");
        return methods;
    }
}
